# tvdb_api

./: pyproject.toml  tvdb_api.py
.github/workflows/: test.yml
